dbt tests in airflow

--- a/fx_market/dbt_project.yml
+++ b/fx_market/dbt_project.yml
@@ -31,6 +31,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   fx_market:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    # Silver layer
+    silver:
+      +schema: SILVER      
+      +materialized: table      
+      
+    # Gold layer
+    gold:
+      +schema: GOLD
+      +materialized: table
